--- a/calc/index.html
+++ b/calc/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-      <title>Insira um ano e descubra a respectiva geração</title>
+      <title>De qual geração você é? Descubra aqui</title>
       <meta content="É a calculadora de gerações!" name="description">
       <meta property="og:image" content="ogimage.png"/>
       <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <div id="help">Navegação horizontal <p class="swipeleft">👆</p></div>
     <main>
       <section id="titulo">
         <h1>De qual geração você é?</h1>
@@ -24,8 +25,8 @@
       </section>
 
       <section id="grafico">
-      <div class="blocos"></div>
-      <div class="voce"></div>
+        <div class="blocos"></div>
+        <div class="voce"></div>
       </section>
 
       <section id="cards">
