--- a/calc/index.html
+++ b/calc/index.html
@@ -12,15 +12,15 @@
   </head>
 
   <body>
-    <div id="helpswipe">Navegação horizontal <p class="swipeleft">👆</p></div>
-    <div id="helptouch"><p class="touch">👇</p> para interagir</div>
+    <div id="helpswipe"><p class="swipeleft">👆</p><div>Navegação horizontal</div></div>
+    <!-- <div id="helptouch"><div>Toque para interagir</div><p class="touch">👆</p></div> -->
     <main>
       <section id="titulo">
         <h1>De qual geração você é?</h1>
         <div>
           <h2>Ano de nascimento</h2>
           <input placeholder="AAAA" autofocus>
-          <p>Insira 4 dígitos</p>
+          <p>4 dígitos</p>
           <button class="btnmostrar" type="button" onclick="calcular(validar())">Calcular</button>
         </div>
       </section>
