--- a/calc/exp/index.html
+++ b/calc/exp/index.html
@@ -6,7 +6,7 @@
       <title>De qual geração você é? Descubra aqui</title>
       <meta content="É a calculadora de gerações!" name="description">
       <meta property="og:image" content="ogimage.png"/>
-      <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="..\..\favicon.ico" type="image/x-icon">
       <link rel="stylesheet" href="app.css" type="text/css" charset="UTF-8" >
   </head>
 
