--- a/calc/exp/index.html
+++ b/calc/exp/index.html
@@ -50,6 +50,6 @@
         </div>
       </section>
     </main>  
-      <script src="app.js" type="text/javascript" charset="UTF-8" ></script>
+      <script src="js/app.js" type="text/javascript" charset="UTF-8" ></script>
   </body>
 </html>
