--- a/calc/exp/index.html
+++ b/calc/exp/index.html
@@ -16,7 +16,7 @@
       <section id="titulo">
         <h1>De qual geração você é?</h1>
         <div>
-          <button class="btnmostrar" type="button" onclick="calcular(validar())">Calcular</button>
+          <button class="butcalcular" type="button" onclick="calcular(validar())">Calcular</button>
           <h2>Ano de nascimento</h2>
           <input pattern="[0-9]{4}" minlength="4" maxlength="4" inputmode="numeric" type="text" title="Insira 4 digitos" autofocus>
         </div>
