--- a/calc/exp/index.html
+++ b/calc/exp/index.html
@@ -23,6 +23,7 @@
       </section>
 
       <section id="grafico">
+        <div class="timeline"></div>
         <div class="blocos"></div>
         <div class="voce"></div>
       </section>
@@ -49,7 +50,7 @@
           </div>
         </div>
       </section>
-    </main>  
+    </main> 
       <script src="js/app.js" type="text/javascript" charset="UTF-8" ></script>
   </body>
 </html>
