--- a/calc/exp/index.html
+++ b/calc/exp/index.html
@@ -51,6 +51,6 @@
         </div>
       </section>
     </main> 
-      <script src="js/app.js" type="text/javascript" charset="UTF-8" ></script>
+      <script src="js/app2.js" type="text/javascript" charset="UTF-8" ></script>
   </body>
 </html>
