--- a/calc/exp/index.html
+++ b/calc/exp/index.html
@@ -43,6 +43,7 @@
           <button id="calcular" type="button" onclick="calcular(validar())">Calcular</button>
           <h2>Ano de nascimento</h2>
           <input pattern="[0-9]{4}" minlength="4" maxlength="4" inputmode="numeric" type="text" title="Insira 4 digitos" autofocus>
+          <button id="limpar" type="button" onclick="window.location.reload()">Recomecar?</button>
         </div>
       </section>
 
