--- a/calc/exp/index.html
+++ b/calc/exp/index.html
@@ -20,7 +20,7 @@
           <button id="calcular" type="button">Calcular</button>
           <h2>Ano de nascimento</h2>
           <input pattern="[0-9]{4}" minlength="4" maxlength="4" inputmode="numeric" type="text" title="Insira 4 digitos" autofocus>
-          <button id="limpar" type="button" onclick="window.location.reload()">Recomecar?</button>
+          <button id="limpar" type="button" onclick="window.location.reload()">Recomeçar?</button>
         </div>
       </section>
 
