--- a/mapa/index.html
+++ b/mapa/index.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linha do tempo dos Google Phones</title>
-    <meta content="Como eles cresceram (ou diminuíram) ao longo do tempo? Meça você mesmo!" name="description">
+    <title>Casamentos LGBT entre 2013 e 2020 no Brasil</title>
+    <meta content="Veja os dados por estado" name="description">
     <meta property="og:image" content="images/ogimage.png"/>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
