--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -20,7 +20,7 @@
         </section>
         <section id="titulo">
             <h1>Casamentos homoafetivos no Brasil</h1>
-            <h2>Registros civis registrados entre os anos 13-20 de casais H-H/M-M. Dados do IBGE.</h2>
+            <h2>Registros civis registrados entre os anos 13-20 de casais HH/MM. Dados do IBGE.</h2>
         </section>
         <section id="mapa-container">
             <section id="mapa">
