--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -7,7 +7,7 @@
     <meta content="Veja os dados por estado" name="description">
     <meta property="og:image" content="images/ogimage.png"/>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="..\favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="..\..\favicon.ico" type="image/x-icon">
 </head>
 <body>
     <main>
@@ -20,7 +20,7 @@
         </section>
         <section id="titulo">
             <h1>Casamentos homoafetivos no Brasil</h1>
-            <h2>Registros civis registrados entre os anos 13-20 de casais HH/MM. Dados do IBGE.</h2>
+            <h2>Registros civis entre os anos 13-20 de casais HH/MM. Dados do IBGE.</h2>
         </section>
         <section id="mapa-container">
             <section id="mapa">
