--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section id="dados">
-            <div class="estado">Selecione um estado</div>
+            <div class="estado"></div>
             <div class="pop"></div>
             <div class="ct"></div>
             <div class="cp100"></div>
@@ -20,7 +20,7 @@
         </section>
         <section id="titulo">
             <h1>Casamentos homoafetivos no Brasil</h1>
-            <h2>Registros civis entre os anos 13-20 de casais HH/MM. Dados do IBGE.</h2>
+            <h2>Registros civis dos anos 2013-20 entre casais HH/MM. Dados do IBGE.</h2>
 
         </section>
         <section id="mapa-container">
