--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -12,16 +12,27 @@
 <body>
     <main>
         <section id="dados">
-            <div class="estado"></div>
-            <div class="pop"></div>
-            <div class="ct"></div>
-            <div class="cp100"></div>
-            <div class="indice"></div>
+            <div class="uf"></div>
+            <div class="iv">
+                <div class="inum"></div>
+                <div class="itxt">Índice de visibilidade</div>
+            </div>
+            <div class="estadoct">
+                <div class="estado"></div>
+                <div class="ct"></div>
+            </div>
+            <div class="pop">
+                <div class="poptxt"></div>
+                <div class="popnum"></div>
+            </div>
+            <div class="cp100">
+                <div class="cptxt"></div>
+                <div class="cpnum"></div>
+            </div>
         </section>
         <section id="titulo">
             <h1>Casamentos homoafetivos no Brasil</h1>
             <h2>Registros civis dos anos 2013-20 entre casais HH/MM. Dados do IBGE.</h2>
-
         </section>
         <section id="mapa-container">
             <section id="mapa">
