--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -32,7 +32,7 @@
         </section>
         <section id="titulo">
             <h1>Casamentos homoafetivos no Brasil</h1>
-            <h2>Registros civis dos anos 2013-20 entre casais HH/MM. Dados do IBGE.</h2>
+            <h2>Registros civis entre os anos 2013 e 2020 de casais HH/MM. Dados do IBGE.</h2>
         </section>
         <section id="mapa-container">
             <section id="mapa">
