Inserção número HH e MM

--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -29,9 +29,13 @@
                 <div class="poptxt"></div>
                 <div class="popnum"></div>
             </div>
+            <div class="genero">
+                <div class="homem"></div>
+                <div class="mulher"></div>
+            </div>
         </section>
         <section id="titulo">
-            <h1>Onde se casa mais?</h1>
+            <h1>Onde se casam?</h1>
             <h2>Dados do IBGE dos registros em cartórios brasileiros dos casamentos homoafetivos entre os anos de 2013 e 2020</h2>
         </section>
         <section id="mapa-container">
