Tamanho de fontes

--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -13,30 +13,29 @@
     <main>
         <section id="dados">
             <div class="uf"></div>
-            <div class="estadoct">
-                <div class="estado"></div>
-                <div class="ct"></div>
-            </div>
             <div class="iv">
                 <div class="itxt">Visibilidade</div>
                 <div class="inum"></div>
             </div>
-            <div class="cp100">
-                <div class="cptxt"></div>
-                <div class="cpnum"></div>
-            </div>
-            <div class="pop">
-                <div class="poptxt"></div>
-                <div class="popnum"></div>
+            <div class="estadoct">
+                <div class="estado"></div>
+                <div class="ct"></div>
             </div>
             <div class="genero">
                 <div class="homem"></div>
                 <div class="mulher"></div>
             </div>
+            <div class="cp100">
+                <div class="cptxt"></div>
+                <div class="cpnum"></div>
+            </div>
+
+            <div class="pop">
+            </div>
         </section>
         <section id="titulo">
             <h1>Onde se casam?</h1>
-            <h2>Dados do IBGE dos registros em cartórios brasileiros dos casamentos homoafetivos entre os anos de 2013 e 2020</h2>
+            <h2>Dados do IBGE dos registros em cartórios brasileiros de casamentos homoafetivos entre os anos de 2013 e 2020</h2>
         </section>
         <section id="mapa-container">
             <section id="mapa">
