--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -11,35 +11,32 @@
 </head>
 <body>
     <main>
+        <section id="mapa">
+        </section>
+        <section id="titulo">
+            <h1>Casados?</h1>
+            <h2>Quanto mais visível o estado, maior a chance de encontrar pares homoafetivos <u>casados</u> por lá.</h2>
+            <div>
+                <p>Nesta página há informações dos casamentos entre <b>pessoas do mesmo gênero</b> registrados nos cartórios brasileiros entre os anos de 2013 e 2020.</p>
+                <p><span id="cursor"></span> no estado de seu interesse para ver os detalhes ou aproveite o passeio com os dados de todo o país em autoplay.</p>
+            </div>
+        </section>
         <section id="dados">
             <div class="uf"></div>
-            <div class="iv">
-                <div class="itxt">Visibilidade</div>
-                <div class="inum"></div>
-            </div>
-            <div class="estadoct">
+            <div class="estadoct umcinco">
                 <div class="estado"></div>
                 <div class="ct"></div>
             </div>
-            <div class="genero">
+            <div class="genero umdois">
                 <div class="homem"></div>
                 <div class="mulher"></div>
+            </div>
+            <div class="pop">
             </div>
             <div class="cp100">
                 <div class="cptxt"></div>
                 <div class="cpnum"></div>
             </div>
-
-            <div class="pop">
-            </div>
-        </section>
-        <section id="titulo">
-            <h1>Onde se casam?</h1>
-            <h2>Dados do IBGE dos registros em cartórios brasileiros de casamentos homoafetivos entre os anos de 2013 e 2020</h2>
-        </section>
-        <section id="mapa-container">
-            <section id="mapa">
-            </section>
         </section>
         <script src="app.js"></script>
     </main>
