--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -6,7 +6,7 @@
     <title>Casamentos LGBT entre 2013 e 2020 no Brasil</title>
     <meta content="Veja os dados por estado" name="description">
     <meta property="og:image" content="images/ogimage.png"/>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="v2.css" />
     <link rel="shortcut icon" href="..\..\favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -14,8 +14,8 @@
         <section id="mapa">
         </section>
         <section id="titulo">
-            <h1>Casados?</h1>
-            <h2>Quanto mais visível o estado, maior a chance de encontrar pares homoafetivos <u>casados</u> por lá.</h2>
+            <h1>Casou onde?</h1>
+            <h2>Quanto <b>mais visível</b> o estado no mapa, maior a chance de encontrar um casal homoafetivo casado por lá.</h2>
             <div>
                 <p>Nesta página há informações dos casamentos entre <b>pessoas do mesmo gênero</b> registrados nos cartórios brasileiros entre os anos de 2013 e 2020.</p>
                 <p><span id="cursor"></span> no estado de seu interesse para ver os detalhes ou aproveite o passeio com os dados de todo o país em autoplay.</p>
@@ -23,9 +23,9 @@
         </section>
         <section id="dados">
             <div class="uf"></div>
-            <div class="estadoct umcinco">
-                <div class="estado"></div>
-                <div class="ct"></div>
+            <div class="estadoct">
+                <div class="estado umdois"></div>
+                <div class="ct umcinco"></div>
             </div>
             <div class="genero umdois">
                 <div class="homem"></div>
@@ -34,8 +34,8 @@
             <div class="pop">
             </div>
             <div class="cp100">
-                <div class="cptxt"></div>
-                <div class="cpnum"></div>
+                <div class="cpnum umcinco"></div>
+                <div class="cptxt zerosete"></div>
             </div>
         </section>
         <script src="app.js"></script>
