--- a/mapa/v2/index.html
+++ b/mapa/v2/index.html
@@ -13,30 +13,26 @@
     <main>
         <section id="mapa">
         </section>
-        <section id="titulo">
+        <section id="cabecalho">
             <h1>Casou onde?</h1>
             <h2>Quanto <b>mais visível</b> o estado no mapa, maior a chance de encontrar um casal homoafetivo casado por lá.</h2>
-            <div>
-                <p>Nesta página há informações dos casamentos entre <b>pessoas do mesmo gênero</b> registrados nos cartórios brasileiros entre os anos de 2013 e 2020.</p>
-                <p><span id="cursor"></span> no estado de seu interesse para ver os detalhes ou aproveite o passeio com os dados de todo o país em autoplay.</p>
-            </div>
+        </section>
+        <section id="infos">
+            <div>Registros de casamentos entre <b>pessoas do mesmo gênero</b> em cartórios brasileiros entre os anos de 2013 e 2020. Informações <a target="_blank" href="https://sidra.ibge.gov.br/tabela/4406">via IBGE.</a> Cálculo considera população de <span id="pop"></span> para <span id="uf"></span>.</div>
+            <div><span id="cursor"></span> no estado para ver os detalhes ou aproveite o passeio no autoplay.</div>
         </section>
         <section id="dados">
-            <div class="uf"></div>
             <div class="estadoct">
                 <div class="estado umdois"></div>
-                <div class="ct umcinco"></div>
+                <div class="cp100">
+                    <span class="cpnum umcinco"></span><span class="cptxt zerosete"></span>
+                </div>
             </div>
             <div class="genero umdois">
                 <div class="homem"></div>
                 <div class="mulher"></div>
             </div>
-            <div class="pop">
-            </div>
-            <div class="cp100">
-                <div class="cpnum umcinco"></div>
-                <div class="cptxt zerosete"></div>
-            </div>
+            <div class="ct umdois"></div>
         </section>
         <script src="app.js"></script>
     </main>
