--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tode Araujo - MJDA</title>
+    <title>Interaja com as minhas experiências feitas no MJDA 2021-2022 - Thiago 'Tode' Araujo - todearaujo.com</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
-        <a href="https://www.todearaujo.com" class="link-todearaujo"><b>todearaujo.com</b>/</a><a href="https://www.insper.edu.br/pos-graduacao/master-em-jornalismo-de-dados-automacao-e-data-storytelling/" class="link-mjda" style="color: red;">mjda/</a>
+        <div class="ola"><b>Olá!</b> Selecione uma das experiência para conhecer.</div>
+        <a href="https://www.todearaujo.com" target="_blank" class="link-todearaujo" style="color:#0F0F0F;">todearaujo.com/</a><a href="https://www.insper.edu.br/pos-graduacao/master-em-jornalismo-de-dados-automacao-e-data-storytelling/" class="link-mjda" target="_blank" style="color: #0F0F0F;"><b>mjda</b>/</a>
         <select id="interactiveMenu" onchange="location = this.value;">
-            <option value="">interativo</option>
-            <option value="https://todearaujo.com/mjda/calc/">Calc</option>
-            <option value="https://todearaujo.com/mjda/mapa/">Mapa</option>
-            <option value="https://todearaujo.com/mjda/quiz/">Quiz</option>
-            <option value="https://todearaujo.com/mjda/scroll/">Scroll</option>
+            <option value="">👉🏻 interativo</option>
+            <option value="https://todearaujo.com/mjda/calc/">✖️ calc</option>
+            <option value="https://todearaujo.com/mjda/mapa/">🗺️ mapa</option>
+            <option value="https://todearaujo.com/mjda/quiz/">🤔 quiz</option>
+            <option value="https://todearaujo.com/mjda/scroll/">📱 scroll</option>
         </select>
-        <p>Selecione em 'interativo' qual exercício quer interagir.</p>
+        <div class="interativos">Em ✖️, calcule sua geração. 🗺️ com casamentos LGBT. No 🌎, quiz de economia e 📱 é a régua dos Google Phones.</div>
     </div>
 </body>
 </html>
