--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="ola"><b>Olá!</b> Selecione uma das experiência para conhecer.</div>
+        <div class="ola"><b>Olá!</b> Selecione uma das experiências para conhecer.</div>
         <a href="https://www.todearaujo.com" target="_blank" class="link-todearaujo" style="color:#0F0F0F;">todearaujo.com/</a><a href="https://www.insper.edu.br/pos-graduacao/master-em-jornalismo-de-dados-automacao-e-data-storytelling/" class="link-mjda" target="_blank" style="color: #0F0F0F;"><b>mjda</b>/</a>
         <select id="interactiveMenu" onchange="location = this.value;">
             <option value="">👉🏻 interativo</option>
