--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Interaja com as minhas experiências feitas no MJDA 2021-2022 - Thiago 'Tode' Araujo - todearaujo.com</title>
+    <title>Interaja com as minhas experiências feitas no MJDA 2021-2022 - Thiago 'Tode' Araujo - github.todearaujo.com</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -11,10 +11,10 @@
         <a href="https://www.todearaujo.com" target="_blank" class="link-todearaujo" style="color:#0F0F0F;">todearaujo.com/</a><a href="https://www.insper.edu.br/pos-graduacao/master-em-jornalismo-de-dados-automacao-e-data-storytelling/" class="link-mjda" target="_blank" style="color: #0F0F0F;"><b>mjda</b>/</a>
         <select id="interactiveMenu" onchange="location = this.value;">
             <option value="">👉🏻 interativo</option>
-            <option value="https://todearaujo.com/mjda/calc/">✖️ calc</option>
-            <option value="https://todearaujo.com/mjda/mapa/">🗺️ mapa</option>
-            <option value="https://todearaujo.com/mjda/quiz/">🤔 quiz</option>
-            <option value="https://todearaujo.com/mjda/scroll/">📱 scroll</option>
+            <option value="/mjda/calc/">✖️ calc</option>
+            <option value="/mjda/mapa/">🗺️ mapa</option>
+            <option value="/mjda/quiz/">🤔 quiz</option>
+            <option value="/mjda/scroll/">📱 scroll</option>
         </select>
         <div class="interativos">Em ✖️, calcule sua geração. 🗺️ com casamentos LGBT. No 🌎, quiz de economia e 📱 é a régua dos Google Phones.</div>
     </div>
