--- a/quiz/index.html
+++ b/quiz/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR" type="text/html">
 
 <head>
-    <title>Descubra a bandeira do país com o maior PIB do mundo</title>
+    <title>Descubra a bandeira do país com o maior PIB do mundo - Thiago 'Tode' Araujo - github.todearaujo.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link href="quiz.css" rel="stylesheet" type="text/css" />
