--- a/mapa/index.html
+++ b/mapa/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casamentos LGBT entre 2013 e 2020 no Brasil</title>
+    <title>Casamentos LGBT entre 2013 e 2020 no Brasil - Thiago 'Tode' Araujo - github.todearaujo.com</title>
     <meta content="Veja os dados por estado" name="description">
     <meta property="og:image" content="images/ogimage.png"/>
     <link rel="stylesheet" href="css.css" />
