--- a/calc/exp/index.html
+++ b/calc/exp/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8" type="text/html">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3" />
-      <title>De qual geração você é? Descubra aqui</title>
+      <title>De qual geração você é? Descubra aqui - Thiago 'Tode' Araujo - github.todearaujo.com</title>
       <meta content="É a calculadora de gerações!" name="description">
       <meta property="og:image" content="ogimage.png"/>
       <link rel="shortcut icon" href="..\..\favicon.ico" type="image/x-icon">
